--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Home</h1>
-<h2><%= @title%></h2>
+<h2><%= @article.title %></h2>
+<h2><%= @article.content %></h2>
 <%= link_to 'about', about_path %>
