--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
-@import 'header';
-@import 'tabs';
-@import 'variables';
-@import 'card';
-
+@import "header";
+@import "tabs";
+@import "variables";
+@import "card";
+@import "article";
 html {
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
@@ -12,18 +12,21 @@ html {
   box-sizing: border-box;
   height: 100%;
 }
-
 *,
 *:before,
 *:after {
   box-sizing: border-box;
   margin: 0;
 }
-
 body {
   height: 100%;
   background-color: $base-bg-color;
   font-size: 1em;
+  color: $text-base-color;
+}
+
+a {
+  text-decoration: none;
   color: $text-base-color;
 }
 
