--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,10 @@
 @import "variables";
 @import "card";
 @import "article";
+@import 'buttons';
+@import 'form';
+@import 'flash';
+
 html {
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
