--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,9 +3,10 @@
 @import "variables";
 @import "card";
 @import "article";
-@import 'buttons';
-@import 'form';
-@import 'flash';
+@import "buttons";
+@import "form";
+@import "flash";
+@import "common";
 
 html {
   word-spacing: 1px;
@@ -28,17 +29,14 @@ body {
   font-size: 1em;
   color: $text-base-color;
 }
-
 a {
   text-decoration: none;
   color: $text-base-color;
 }
-
 .container {
   padding: 16px 16px;
   width: 100%;
 }
-
 .float_btn {
   position: fixed;
   bottom: 16px;
@@ -50,7 +48,6 @@ a {
   background-color: $primary-color;
   color: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-
   i {
     margin-top: 22px;
   }
